--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ header ul.menu > li a:hover {
 
 /* Header / Menu / Basket */
 header .basket {
-  display: none;
+  visibility: hidden;
   width: 290px;
   padding: 10px 20px;
   border: 1px solid #D2D2D2;
@@ -68,9 +68,12 @@ header .basket {
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
+  transition: .6s;
+  opacity: 0;
 }
 header .basket.show {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 header .basket .arrow {
   width: 20px;
