--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,10 @@ body {
   line-height: 1;
   font-family: "Roboto", "Noto Sans KR", sans-serif;
   word-break: keep-all;
+  color: #1D1D1D;
 }
 a {
+  color: #1D1D1D;
   text-decoration: none;
 }
 
@@ -13,6 +15,7 @@ header {
   background-color: #3A3A3A;
 }
 header .inner {
+  position: relative;
   max-width: 1020px;
   margin: 0 auto;
 }
@@ -115,4 +118,97 @@ header .basket ul li a {
 }
 header .basket ul li a:hover {
   text-decoration: underline;
+}
+
+
+/* Header / Search */
+header .search-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+header .search {
+  position: relative;
+  max-width: 680px;
+  margin: 0 auto;
+}
+header .search .shadow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .4);
+}
+header .search .textfield {
+  position: relative;
+}
+header .search input {
+  width: 100%;
+  height: 44px;
+  padding: 0 40px;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  background-color: transparent; /* 투명한 색 */
+  font-size: 17px;
+  color: #FFF;
+}
+header .search .search-icon {
+  width: 40px;
+  height: 44px;
+  background-image: url("../images/header_search.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: .4;
+}
+header .search .search-closer {
+  width: 40px;
+  height: 44px;
+  background-image: url("../images/header_close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: .4;
+  cursor: pointer;
+}
+header .search .search-closer:hover {
+  opacity: 1;
+}
+header .search .autocompletes {
+  width: 100%;
+  padding: 26px 40px 20px;
+  border-radius: 0 0 18px 18px;
+  box-sizing: border-box;
+  background-color: #FFF;
+  position: absolute;
+  top: 44px;
+  left: 0;
+}
+header .search .autocompletes h3 {
+  font-size: 12px;
+  color: #6E6E6E;
+  margin-bottom: 12px;
+}
+header .search .autocompletes ul li a {
+  display: block;
+  margin: 0 -14px;
+  padding: 10px 0 10px 30px;
+  font-size: 14px;
+  cursor: pointer;
+}
+header .search .autocompletes ul li:hover a {
+  background-color: #DDD;
+  color: #0071E3;
+}
+
+
+header.searching ul.menu > li {
+  display: none;
 }
