--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ header ul.menu {
 header ul.menu > li {
   display: flex;
   position: relative;
+  transition: .4s;
 }
 header ul.menu > li > a {
   padding: 0 10px;
@@ -133,7 +134,9 @@ header .search-wrap {
   top: 0;
   left: 0;
   width: 100%;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: .4s;
 }
 header .search {
   position: relative;
@@ -215,10 +218,28 @@ header .search .autocompletes ul li:hover a {
   color: #0071E3;
 }
 
+header .search input,
+header .search .search-icon,
+header .search .autocompletes h3,
+header .search .autocompletes li {
+  transition: .6s;
+  transform: translate(100px, 0);
+}
+
 
 header.searching ul.menu > li {
-  display: none;
+  transform: scale(.7);
+  opacity: 0;
 }
 header.searching .search-wrap {
-  display: block;
+  visibility: visible;
+  opacity: 1;
+  transition-delay: .2s;
+}
+header.searching .search input,
+header.searching .search .search-icon,
+header.searching .search .autocompletes h3,
+header.searching .search .autocompletes li {
+  transition-delay: .2s;
+  transform: translate(0, 0);
 }
