--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,22 @@ a {
   color: #1D1D1D;
   text-decoration: none;
 }
+img {
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+p {
+  line-height: 1.6;
+}
+
+/* Inner */
+.inner {
+ max-width: 980px; 
+ margin: 0 auto;
+ padding: 0 20px;
+ position: relative;
+}
 
 /* Btn */
 .btn {
@@ -39,15 +55,39 @@ a {
   box-shadow: 0 0 0 4px #81B9F1;
 }
 
+/* Background image text */
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+/* Links */
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+a.link {
+  color: #0071E3;
+  font-size: 19px;
+  line-height: 1.3;
+}
+a.link:hover {
+  text-decoration: underline;
+}
+a.link::after {
+  content: " >";
+}
 
 /* Header */
 header {
   background-color: #3A3A3A;
 }
 header .inner {
-  position: relative;
   max-width: 1020px;
-  margin: 0 auto;
 }
 header ul.menu {
   height: 44px;
@@ -282,7 +322,6 @@ nav {
 nav .inner {
   max-width: 1000px;
   height: 52px;
-  margin: 0 auto;
   display: flex;
   align-items: center;
 }
@@ -314,16 +353,41 @@ nav .menu li.active a:hover {
 
 
 /* Hero */
-.hero {}
-.hero .inner {}
-.hero h1 {}
+.hero {
+  background-color: #F5F5F5;
+}
+.hero .inner {
+  padding-bottom: 110px;
+}
+.hero h1 {
+  width: 221px;
+  height: 91px;
+  background-image: url("../images/hero_ipad_text.png");
+}
 .hero figure {}
 .hero figure img {}
 .hero figure figcaption {}
 .hero figure figcaption .caption-camera {}
 .hero figure figcaption .caption-chip {}
 .hero figure figcaption .caption-storage {}
-.hero h2 {}
-.hero p.pricing {}
-.hero p.description {}
-.hero .links {}
+.hero h2 {
+  width: 738px;
+  height: 145px;
+  margin: 0 auto;
+  background-image: url("../images/hero_headline.png");
+}
+.hero p.pricing {
+  margin-top: 40px;
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+}
+.hero p.description {
+  width: 88%;
+  margin: 18px auto 0;
+  font-size: 19px;
+  text-align: center;
+}
+.hero .links {
+  margin-top: 30px;
+}
