--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+html {
+  --color-white: #fff;
+  --color-black: #000;
+  --color-font: #1d1d1d;
+  --color-font-darkgray: #6e6e6e;
+  --color-font-lightgray: #f5f5f5;
+  --color-link: #0071e3;
+  --color-link-focus: #81b9f1;
+  --color-border: #d2d2d2;
+  --color-header: #3a3a3a;
+  --color-section: #f5f5f5;
+  --color-shadow: rgba(0, 0, 0, 0.4);
+}
 html.fixed {
   position: fixed;
   overflow-y: scroll;
@@ -7,12 +20,12 @@ body {
   height: 10000px;
   font-size: 16px;
   line-height: 1;
-  font-family: "Roboto", "Noto Sans KR", sans-serif;
+  font-family: 'Roboto', 'Noto Sans KR', sans-serif;
   word-break: keep-all;
-  color: #1D1D1D;
+  color: var(--color-font);
 }
 a {
-  color: #1D1D1D;
+  color: var(--color-font);
   text-decoration: none;
 }
 img {
@@ -26,10 +39,10 @@ p {
 
 /* Inner */
 .inner {
- max-width: 980px; 
- margin: 0 auto;
- padding: 0 20px;
- position: relative;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: relative;
 }
 
 /* Btn */
@@ -44,15 +57,15 @@ p {
   outline: none;
   font-size: 11px;
   line-height: 1;
-  color: #FFF;
-  background-color: #0071E3;
+  color: var(--color-white);
+  background-color: var(--color-link);
   cursor: pointer;
 }
 .btn:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 .btn:focus {
-  box-shadow: 0 0 0 4px #81B9F1;
+  box-shadow: 0 0 0 4px var(--color-link-focus);
 }
 
 /* Background image text */
@@ -71,7 +84,7 @@ p {
   gap: 40px;
 }
 a.link {
-  color: #0071E3;
+  color: var(--color-link);
   font-size: 19px;
   line-height: 1.3;
 }
@@ -79,7 +92,7 @@ a.link:hover {
   text-decoration: underline;
 }
 a.link::after {
-  content: " >";
+  content: ' >';
 }
 
 /* Figures */
@@ -100,7 +113,8 @@ a.link::after {
 
 /* Header */
 header {
-  background-color: #3A3A3A;
+  --header-height: 44px;
+  background-color: var(--color-header);
   position: relative;
   z-index: 9;
 }
@@ -108,24 +122,24 @@ header .inner {
   max-width: 1020px;
 }
 header ul.menu {
-  height: 44px;
+  height: var(--header-height);
   display: flex;
   justify-content: space-between;
 }
 header ul.menu > li {
   display: flex;
   position: relative;
-  transition: .4s;
+  transition: 0.4s;
 }
 header ul.menu > li > a {
   padding: 0 10px;
   font-size: 11px;
   display: flex;
   align-items: center;
-  color: #F5F5F5;
-  opacity: .7;
+  color: var(--color-font-lightgray);
+  opacity: 0.7;
   text-decoration: none;
-  transition: .5s;
+  transition: 0.5s;
 }
 header ul.menu > li.apple-logo > a,
 header ul.menu > li.search-starter > a,
@@ -136,13 +150,13 @@ header ul.menu > li.basket-starter > a {
   background-position: center 13px;
 }
 header ul.menu > li.apple-logo > a {
-  background-image: url("../images/header_apple.svg");
+  background-image: url('../images/header_apple.svg');
 }
 header ul.menu > li.search-starter > a {
-  background-image: url("../images/header_search.svg");
+  background-image: url('../images/header_search.svg');
 }
 header ul.menu > li.basket-starter > a {
-  background-image: url("../images/header_bag.svg");
+  background-image: url('../images/header_bag.svg');
 }
 header ul.menu > li a:hover {
   opacity: 1;
@@ -153,14 +167,14 @@ header .basket {
   visibility: hidden;
   width: 290px;
   padding: 10px 20px;
-  border: 1px solid #D2D2D2;
+  border: 1px solid var(--color-border);
   border-radius: 10px;
   box-sizing: border-box;
-  background-color: #FFF;
+  background-color: var(--color-white);
   position: absolute;
   top: calc(100% + 4px);
   right: -6px;
-  transition: .6s;
+  transition: 0.6s;
   opacity: 0;
 }
 header .basket.show {
@@ -176,11 +190,11 @@ header .basket .arrow {
   overflow: hidden;
 }
 header .basket .arrow::before {
-  content: "";
+  content: '';
   width: 12px;
   height: 12px;
-  border: 1px solid #D2D2D2;
-  background-color: #FFF;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-white);
   transform: rotate(45deg);
   transform-origin: 0 0;
   position: absolute;
@@ -190,25 +204,24 @@ header .basket .arrow::before {
 header .basket .message {
   padding: 30px 0;
   font-size: 13px;
-  color: #6E6E6E;
+  color: var(--color-font-darkgray);
   text-align: center;
 }
 header .basket ul {
   margin-top: 10px;
 }
 header .basket ul li {
-  border-top: 1px solid #D2D2D2;
+  border-top: 1px solid var(--color-border);
 }
 header .basket ul li a {
   display: block;
   padding: 14px;
   font-size: 13px;
-  color: #0071E3;
+  color: var(--color-link);
 }
 header .basket ul li a:hover {
   text-decoration: underline;
 }
-
 
 /* Header / Search */
 header .search-wrap {
@@ -218,7 +231,7 @@ header .search-wrap {
   width: 100%;
   visibility: hidden;
   opacity: 0;
-  transition: .4s;
+  transition: 0.4s;
 }
 header .search {
   position: relative;
@@ -231,43 +244,43 @@ header .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: var(--color-shadow);
 }
 header .search .textfield {
   position: relative;
 }
 header .search input {
   width: 100%;
-  height: 44px;
+  height: var(--header-height);
   padding: 0 40px;
   border: none;
   outline: none;
   box-sizing: border-box;
   background-color: transparent; /* 투명한 색 */
   font-size: 17px;
-  color: #FFF;
+  color: var(--color-white);
 }
 header .search .search-icon {
   width: 40px;
-  height: 44px;
-  background-image: url("../images/header_search.svg");
+  height: var(--header-height);
+  background-image: url('../images/header_search.svg');
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
   top: 0;
   left: 0;
-  opacity: .4;
+  opacity: 0.4;
 }
 header .search .search-closer {
   width: 40px;
-  height: 44px;
-  background-image: url("../images/header_close.svg");
+  height: var(--header-height);
+  background-image: url('../images/header_close.svg');
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
   top: 0;
   right: 0;
-  opacity: .4;
+  opacity: 0.4;
   cursor: pointer;
 }
 header .search .search-closer:hover {
@@ -278,14 +291,14 @@ header .search .autocompletes {
   padding: 26px 40px 20px;
   border-radius: 0 0 18px 18px;
   box-sizing: border-box;
-  background-color: #FFF;
+  background-color: var(--color-white);
   position: absolute;
-  top: 44px;
+  top: var(--header-height);
   left: 0;
 }
 header .search .autocompletes h3 {
   font-size: 12px;
-  color: #6E6E6E;
+  color: var(--color-font-darkgray);
   margin-bottom: 12px;
 }
 header .search .autocompletes ul li a {
@@ -296,43 +309,40 @@ header .search .autocompletes ul li a {
   cursor: pointer;
 }
 header .search .autocompletes ul li:hover a {
-  background-color: #DDD;
-  color: #0071E3;
+  background-color: var(--color-section);
+  color: var(--color-link);
 }
 
 header .search input,
 header .search .search-icon,
 header .search .autocompletes h3,
 header .search .autocompletes li {
-  transition: .6s;
+  transition: 0.6s;
   transform: translate(100px, 0);
 }
 
-
 header.searching ul.menu > li {
-  transform: scale(.7);
+  transform: scale(0.7);
   opacity: 0;
 }
 header.searching .search-wrap {
   visibility: visible;
   opacity: 1;
-  transition-delay: .2s;
+  transition-delay: 0.2s;
 }
 header.searching .search input,
 header.searching .search .search-icon,
 header.searching .search .autocompletes h3,
 header.searching .search .autocompletes li {
-  transition-delay: .2s;
+  transition-delay: 0.2s;
   transform: translate(0, 0);
 }
 
-
-
 /* Navigation */
 nav {
-  background-color: rgba(255, 255, 255, .7);
+  background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(20px);
-  border-bottom: 1px solid #D2D2D2;
+  border-bottom: 1px solid var(--color-border);
   position: sticky;
   top: 0;
   z-index: 10;
@@ -359,20 +369,19 @@ nav .menu li a {
   font-size: 11px;
 }
 nav .menu li a:hover {
-  color: #0071E3;
+  color: var(--color-link);
 }
 nav .menu li.active a {
-  opacity: .5;
+  opacity: 0.5;
   cursor: default;
 }
 nav .menu li.active a:hover {
-  color: #1D1D1D;
+  color: var(--color-font);
 }
-
 
 /* Hero */
 .hero {
-  background-color: #F5F5F5;
+  background-color: var(--color-section);
 }
 .hero .inner {
   padding-bottom: 110px;
@@ -380,7 +389,7 @@ nav .menu li.active a:hover {
 .hero h1 {
   width: 221px;
   height: 91px;
-  background-image: url("../images/hero_ipad_text.png");
+  background-image: url('../images/hero_ipad_text.png');
   position: absolute;
   transform: translate(624px, 235px);
   z-index: 1;
@@ -389,22 +398,22 @@ nav .menu li.active a:hover {
   height: 808px;
 }
 .hero figure {
-  transform: translate(74px ,-64px);
+  transform: translate(74px, -64px);
 }
 .hero figure figcaption .caption-camera {
-  background-image: url("../images/hero_ipad_caption_camera.png");
+  background-image: url('../images/hero_ipad_caption_camera.png');
   width: 120px;
   height: 84px;
   transform: translate(43px, 580px);
 }
 .hero figure figcaption .caption-chip {
-  background-image: url("../images/hero_ipad_caption_chip.png");
+  background-image: url('../images/hero_ipad_caption_chip.png');
   width: 95px;
   height: 43px;
   transform: translate(589px, 510px);
 }
 .hero figure figcaption .caption-storage {
-  background-image: url("../images/hero_ipad_caption_storage.png");
+  background-image: url('../images/hero_ipad_caption_storage.png');
   width: 80px;
   height: 43px;
   transform: translate(627px, 631px);
@@ -413,7 +422,7 @@ nav .menu li.active a:hover {
   width: 738px;
   height: 145px;
   margin: 0 auto;
-  background-image: url("../images/hero_headline.png");
+  background-image: url('../images/hero_headline.png');
 }
 .hero p.pricing {
   margin-top: 40px;
