--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ html.fixed {
   width: 100%;
 }
 body {
-  height: 25000px;
   font-size: 16px;
   line-height: 1;
   font-family: 'Roboto', 'Noto Sans KR', sans-serif;
@@ -35,6 +34,11 @@ img {
 }
 p {
   line-height: 1.6;
+}
+sup {
+  margin-right: 6px;
+  font-size: .7em;
+  vertical-align: top;
 }
 
 /* Inner */
@@ -1107,7 +1111,7 @@ nav .menu li.active a:hover {
 }
 
 
-/* Footer */
+/* Footer / Buy Info */
 footer {
   background-color: var(--color-section);
 }
@@ -1135,8 +1139,22 @@ footer .buy-info p {
 footer .buy-info a.link {
   font-size: 14px;
 }
-
-
+/* Footer / Warning */
+footer .warning {
+  padding: 18px 0 10px;
+  border-top: 1px solid var(--color-border);
+  border-bottom: 1px solid var(--color-border);
+}
+footer .warning ol {
+  list-style: decimal;
+  padding-left: 16px;
+}
+footer .warning li {
+  margin-bottom: 10px;
+  font-size: 11px;
+  line-height: 1.5;
+  color: var(--color-font-darkgray);
+}
 
 
 
