--- a/css/main.css
+++ b/css/main.css
@@ -707,6 +707,17 @@ nav .menu li.active a:hover {
 }
 
 @media (max-width: 740px) {
+  nav .shadow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-shadow);
+    visibility: hidden;
+    opacity: 0;
+    transition: .4s;
+  }
   nav .contents-bg {
     position: absolute;
     top: 0;
@@ -771,6 +782,10 @@ nav .menu li.active a:hover {
     padding: 16px 0;
     font-size: 14px;
   }
+  nav.menuing .shadow {
+    visibility: visible;
+    opacity: 1;
+  }
   nav.menuing .contents-bg {
     visibility: visible;
     height: 232px;
@@ -779,6 +794,12 @@ nav .menu li.active a:hover {
     visibility: visible;
     opacity: 1;
     transform: translate(0, 0);
+  }
+  nav.menuing .menu-toggler::before {
+    transform: rotate(-40deg);
+  }
+  nav.menuing .menu-toggler::after {
+    transform: rotate(40deg);
   }
 }
 
