--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ a.link::after {
   .info {
     max-width: 230px;
   }
-  .info--large .info {
+  .infos--large .info {
     max-width: 288px;
   }
   .info .icon {
@@ -278,7 +278,7 @@ a.link::after {
     max-width: none;
     padding: 0 20px;
   }
-  .info--large .info {
+  .infos--large .info {
     max-width: none;
   }
   .info a.link {
@@ -1584,6 +1584,57 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+@media (max-width: 1000px) {
+  .accessories {
+    margin-top: 120px;
+  }
+  .accessories h1 {
+    width: 384px;
+    height: 243px;
+  }
+  .accessories .figures {
+    height: 700px;
+  }
+  .accessories figure {
+    transform: translate(12px, 0);
+  }
+  .accessories figure img {
+    width: 712px;
+  }
+  .accessories figcaption .caption-memo {
+    transform: scale(.8) translate(677px, -60px);
+  }
+  .accessories figcaption .caption-supports {
+    transform: scale(.8) translate(101px, 650px);
+  }
+}
+
+@media (max-width: 740px) {
+  .accessories h1 {
+    width: 300px;
+    height: 190px;
+  }
+  .accessories .figures {
+    height: auto;
+    margin-top: 64px;
+  }
+  .accessories figure img {
+    width: 380px;
+  }
+  .accessories figcaption .caption-memo {
+    transform: scale(.8) translate(186px, -58px);
+  }
+  .accessories figcaption .caption-supports {
+    width: 160px;
+    height: 44px;
+    background-image: url("../images/accessories_caption_supports_mobile.png");
+    transform: scale(1) translate(31px, 335px);
+  }
+  .accessories .infos {
+    margin-top: 100px;
+  }
 }
 
 
