--- a/css/main.css
+++ b/css/main.css
@@ -2021,9 +2021,9 @@ main {
     margin-top: 120px;
   }
   .privacy h1 {
-    width: 368px;
+    width: 338px;
     height: 182px;
-    transform: translate(70px, 0);
+    transform: translate(35px, 0);
   }
   .privacy .infos {
     margin-top: 24px;
@@ -2074,7 +2074,41 @@ main {
   transform: translate(470px, -620px);
 }
 
+@media (max-width: 1000px) {
+  .accessibility {
+    margin-top: 86px;
+    margin-bottom: 120px;
+  }
+  .accessibility h1 {
+    width: 287px;
+    height: 205px;
+  }
+  .accessibility .info {
+    max-width: 346px;
+  }
+  .accessibility figure {
+    transform: translate(401px, -504px);
+  }
+  .accessibility figure img {
+    width: 329px;
+  }
+}
 
+@media (max-width: 740px) {
+  .accessibility {
+    margin-bottom: 50px;
+  }
+  .accessibility h1 {
+    height: 165px;
+    margin: 0 auto;
+  }
+  .accessibility .info {
+    max-width: none;
+  }
+  .accessibility figure {
+    transform: translate(20px, 0);
+  }
+}
 
 /* AR */
 .ar {
