--- a/css/main.css
+++ b/css/main.css
@@ -2179,6 +2179,12 @@ main {
   color: #03A10E;
 }
 
+@media (max-width: 1000px) {
+  .environment p br {
+    display: none;
+  }
+}
+
 
 /* Accessory Shop */
 .accessory-shop {
@@ -2197,6 +2203,12 @@ main {
   margin-top: 50px;
 }
 
+@media (max-width: 1000px) {
+  .accessory-shop img {
+    width: 960px;
+  } 
+}
+
 
 /* Trade */
 .trade {
@@ -2205,7 +2217,11 @@ main {
   text-align: center;
 }
 
-
+@media (max-width: 1000px) {
+  .trade p br {
+    display: none;
+  } 
+}
 
 /* Compare */
 .compare {
@@ -2263,6 +2279,33 @@ main {
   font-size: 14px;
 }
 
+@media (max-width: 1000px) {
+  .compare .items {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 500px;
+    margin: 68px auto 34px;
+  }
+}
+
+@media (max-width: 740px) {
+  .compare .whitebox {
+    max-width: 430px;
+  }
+  .compare .items {
+    max-width: 190px;
+  }
+  .compare .item {
+    border-bottom: none;
+  }
+  .compare .links {
+    padding-top: 40px;
+    border-top: 1px solid var(--color-border);
+  }
+  .compare a.link {
+    margin-top: 0;
+  }
+}
 
 /* Footer / Buy Info */
 footer {
